<resources>
    <string name="app_name">TimeTable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_main">TimeTable</string>
    <string name="title_settings">Settings</string>
    <string name="title_time">Subjects time</string>
    <string name="title_subjects">Subjects</string>
    <string name="title_teachers">Teachers</string>
    <string name="title_buildings">Buildings</string>
    <string name="title_subject_type">Subjects Types</string>
    <string name="title_display">Time Table</string>
    <string name="add_data_item_title">Add data</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="added">Added</string>
    <string name="empty_list_of_data">Your data of this  type is empty.Use button in the corner to add data</string>
    <string name="deleted">Deleted</string>
    <string name="edit_data">Edit your Data</string>
    <string name="start_time_title">Starting Time</string>
    <string name="end_time_title">Ending Time</string>
    <string name="empty_data">You data is empty. Please make sure that you write something to text field!</string>
    <string name="accept">Accept</string>
    <string name="ask_for_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="already_exist">This data already exist on you list!</string>
    <string name="ask_for_time_mode">12 hour time mode?</string>
    <string name="main_params">Main parameters</string>
    <string name="additional_params">Additional parameters</string>
    <string name="description_12mode_format">Setting up 12 hour time mode for your time of lessons</string>
    <string name="title_12mode_format">12 hour time mode?</string>
    <string name="title_off_ads">Disable ads</string>
    <string name="restore_purchases">Restore purchases</string>
    <string name="description_of_purchases_restore">Use this preferences for if you have bought it already</string>
    <string name="price">Price: 0.99$</string>
    <string name="email">mmstudio@gmail.com</string>
    <string name="additional">Additional</string>
    <string name="description_of_selection_subject">Choose subject</string>
    <string name="description_of_selection_time">Choose subject time</string>
    <string name="description_of_selection_building">Choose subject building</string>
    <string name="description_of_selection_room">Choose subject room/class</string>
    <string name="description_of_selection_teacher">Choose subject teacher</string>
    <string name="description_of_selection_type">Choose subject type</string>
    <string name="time">Time</string>
    <string name="title_building">Building</string>
    <string name="title_additional_data">Additional Data</string>
    <string name="title_room_class">Room/Class</string>
    <string name="title_teacher">Teacher</string>
    <string name="title_lesson_type">Lesson type</string>
    <string name="title_two_weeks">Two weeks</string>
    <string name="two_weeks_mode">Two weeks mode?</string>
    <string name="current_week">Current Week</string>
    <string name="current_week_description">Select the current week</string>
    <string name="reminder_for_week_selection">Pleas select the current week below!</string>
    //Days Of Week
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    
</resources>
