<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_main"
            android:icon="@drawable/home"
            android:title="@string/title_main" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/title_settings" />
    </group>

    <item android:title="@string/title_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_time"
                    android:icon="@drawable/clock"
                    android:title="@string/title_time" />
                <item
                    android:id="@+id/nav_subjects"
                    android:icon="@drawable/subjects"
                    android:title="@string/title_subjects" />
                <item
                    android:id="@+id/nav_teachers"
                    android:icon="@drawable/teacher"
                    android:title="@string/title_teachers" />
                <item
                    android:id="@+id/nav_buildings"
                    android:icon="@drawable/corpus"
                    android:title="@string/title_buildings" />
                <item
                    android:id="@+id/nav_lessons_types"
                    android:icon="@drawable/subject_type"
                    android:title="@string/title_subject_type" />
            </group>
        </menu>
    </item>



</menu>